<resources>
    <string name="app_name">LFA</string>
    <string name="rawr_studio">Rawr Studio</string>

    <!-- TEAMS -->
    <string name="team_mote_name_raptors" translatable="false">Raptors</string>
    <string name="team_mote_name_condors" translatable="false">Condors</string>
    <string name="team_mote_name_eagles" translatable="false">Eagles</string>
    <string name="team_mote_name_mayas" translatable="false">Mayas</string>
    <string name="team_mote_name_dinos" translatable="false">Dinos</string>
    <string name="team_mote_name_fundidores" translatable="false">Fundidores</string>

    <!-- TEAM GROUPS -->
    <string name="grupo_suerox">SUEROX GROUP</string>
    <string name="grupo_under_armour">UNDER ARMOUR GROUP</string>

    <!-- Menu Strings -->
    <string name="menu_news">News</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_standings">Standings</string>
    <string name="menu_patrocinadores">Sponsors</string>
    <string name="menu_acerca_de">About</string>
    <string name="menu_settings">Settings</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- UTILS -->
    <string name="days">DAYS</string>
    <string name="time">HRS</string>
    <string name="minuts">MINS</string>
    <string name="seconds">SECS</string>

    <string name="push_notification_title">Liga de Futbol Americano</string>
    <string name="push_notificatio_subtitle_first">You have: </string>
    <string name="push_notificatio_subtitle_second">news to read.</string>
    <string name="try_again">Try Again</string>

    <string name="empty"></string>


    <!-- preferencias -->
    <string name="idoma">Language</string>
    <string name="elegir_idoma">Choose language</string>
    <string-array name="idiomas_disponibles">
        <item>English</item>
        <item>Espa\u00F1ol</item>
    </string-array>
    <string-array name="orden_idiomas_disponibles">
        <item>en</item>
        <item>es</item>
    </string-array>

    <!--acecaDe-->
    <string name="acerca_de_info">We own or license all copyright rights in the text, images, photographs, video, audio, graphics, user interface, and other content provided on the Services, and the selection, coordination, and arrangement of such content (whether by us or by you), to the full extent provided under the copyright laws of the United States of Mexico and other countries. Except as expressly provided in this Agreement, you are prohibited from copying, reproducing, modifying, distributing, displaying, performing or transmitting any of the contents of the Services for any purposes, and nothing otherwise stated or implied in the Services confers on you any license or right to do so.

You may use the Services and the contents contained in the Services solely for your own individual non-commercial and informational purposes only. Any other use, including for any commercial purposes, is strictly prohibited without our express prior written consent. Systematic retrieval of data or other content from the Services, whether to create or compile, directly or indirectly, a collection, compilation, database or directory, is prohibited absent our express prior written consent.</string>
    <string name="developed_by">Desarrollado por:</string>
    <string name="acerca_de_texto">La informaci\u00F3n y logos contenidos son de car\u00E1cter informativo en busca de fomentar el Football en M\u00E9xico.</string>
    <string name="correo_soporte_rawr">"soporte@rawrstudio.com</string>

    <!--detalleEquipos-->
    <string name="abreviature_number">No.</string>
    <string name="name_string">Name</string>
    <string name="position_string">Pos</string>
    <string name="height_string">Height</string>
    <string name="weight_string">Weight</string>
    <string name="empty_number_value" translatable="false">-</string>
    <string name="local">Local</string>
    <string name="visitante">Visitor</string>
    <string name="estatus_pendiente">P</string>
    <string name="sin_fecha">No Date Available</string>
    <string name="final_texto" translatable="false">final</string>
    <string name="jugando_texto">Playing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
