<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_options">

        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/ic_newspaper_white_24dp"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/menu_teams"
            android:icon="@drawable/ic_player"
            android:title="@string/menu_teams" />

        <item
            android:id="@+id/menu_standings"
            android:icon="@drawable/ic_football_helmet_white_24dp"
            android:title="@string/menu_standings" />

    </group>

    <group android:id="@+id/secundary_options">

        <item android:id="@+id/menu_sponsors"
            android:icon="@drawable/ic_sponsor"
            android:title="@string/menu_patrocinadores" />

        <item android:id="@+id/menu_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_acerca_de"/>

        <item android:id="@+id/menu_config"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/menu_settings"/>

    </group>

</menu>