<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="368dp"
    android:layout_height="wrap_content"
    android:id="@+id/layout_timer"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:background="#777777"
    android:padding="4dp"
    android:elevation="2dp"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#999999"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/tv_dias"
            android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/days"
            android:textAppearance="?attr/textAppearanceSmallPopupMenu"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceLargePopupMenu"
        android:text=":"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#999999"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/tv_horas"
            android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAppearance="?attr/textAppearanceSmallPopupMenu"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceLargePopupMenu"
        android:text=":"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#999999"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/tv_minutos"
            android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minuts"
            android:textAppearance="?attr/textAppearanceSmallPopupMenu"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceLargePopupMenu"
        android:text=":"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#999999"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/tv_segundos"
            android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seconds"
            android:textAppearance="?attr/textAppearanceSmallPopupMenu"/>
    </LinearLayout>
</LinearLayout>